部分pojo的mapstruct增加base_mapstruct